--- a/main.html
+++ b/main.html
@@ -50,11 +50,11 @@
             </div>
         </div>
         <div>
-            <img id="amber" class="image-marker" src="./assets/AmberFort.jpg">
-            <img id="gateway" class="image-marker" src="./assets/GatewayOfIndia.jpg">
-            <img id="gate" class="image-marker" src="./assets/IndiaGate.jpg">
-            <img id="lotus" class="image-marker" src="./assets/LotusTemple.jpg">
-            <img id="victoria" class="image-marker" src="./assets/VictoriaMemorial.jpg">
+            <img id="amber" class="image-marker" src="assets/AmberFort.jpg">
+            <img id="gateway" class="image-marker" src="assets/GatewayOfIndia.jpg">
+            <img id="gate" class="image-marker" src="assets/IndiaGate.jpg">
+            <img id="lotus" class="image-marker" src="assets/LotusTemple.jpg">
+            <img id="victoria" class="image-marker" src="assets/VictoriaMemorial.jpg">
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12 text-center p-5">
             <button id="navigate-button">Show Me The Weather!</button>
